--- a/Team.html
+++ b/Team.html
@@ -88,7 +88,7 @@
 
       <div class="row">
         <div class="col s12 left">
-          <h5><font face="Arial"><b>Team</b></font></h5>
+          <h3><font face="Arial"><b>Team</b></font></h3>
           <!--Faculty members heading and two professors-->
      <!--font face="arial" size="4" color="#1565c0" align="center">FACULTY MEMBERS</font>
         </div>
@@ -139,7 +139,7 @@
    <div class="row">
         <div class="col s12 left">
 
-     <font face="arial" size="4" color="#1565c0">TEAM HEADS</font>
+     <font face="arial" size="7" color="#1565c0">TEAM HEADS</font>
         </div>
       </div>
    <div class="row center">
@@ -177,16 +177,10 @@
 
 
 
-
-
-
-
-
-
 <div class="row">
         <div class="col s12 left">
 
-     <font face="arial" size="4" color="#1565c0">&nbsp&nbsp MANUFACTURING AND PROCUREMENT</font>
+     <font face="arial" size="7" color="#1565c0">&nbsp&nbsp&nbspMARKETING</font>
         </div>
       </div>
    <div class="row center">
@@ -196,10 +190,11 @@
   <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="AJAY.jpg" height="50%">
+      <img src="MAYANK.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Ajay Kumar </b><br><font color="#1565c0" size="3">&nbsp Vice-Captain</font><br><font size="3">+91-8395035486</font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Mayank Tak
+ </b><br><font color="#1565c0" size="3">&nbsp Head</font><br><font size="3">+91-8130807788</font></font></center></p>
 
         </div>
    </div>
@@ -214,10 +209,10 @@
          <div class="col s2">
   <div class="card">
     <div class="card-image "  >
-      <img src="NAVDEEP.jpg" height="50%">
+      <img src="ANI.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Navdeep Kumar </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Ani Agrawal </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
 
@@ -228,15 +223,13 @@
         <div class="col s2">
   <div class="card">
     <div class="card-image "  >
-      <img src="ANKIT MITTAL.jpg" height="50%">
+      <img src="RISHABH.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Ankit Mittal </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Rishabh Shukla</b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
-
-
-<!--div class="row center"-->
+ 
 
 
          <div class="col s1">
@@ -244,10 +237,10 @@
          <div class="col s2">
   <div class="card">
     <div class="card-image "  >
-      <img src="ARZOO.jpg" height="50%">
+      <img src="DIPENDRA.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Arzoo Qureshi </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Dipendra Kain </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
 
@@ -258,14 +251,19 @@
         <div class="col s2">
   <div class="card">
     <div class="card-image "  >
-      <img src="SUMIT.jpg" height="50%">
+      <img src="ARVIND.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Sumit Bain </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Arvind Chandrakar </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
     <div class="col s1">
         </div>
+
+
+
+
+
 
 
 
@@ -309,7 +307,7 @@
 <div class="row">
         <div class="col s12 left">
 
-     <font face="arial" size="4" color="#1565c0">&nbsp&nbsp&nbspSUSPENSION & STEERING</font>
+     <font face="arial" size="7" color="#1565c0">&nbsp&nbsp&nbspSUSPENSION & STEERING</font>
         </div>
       </div>
    <div class="row center">
@@ -428,9 +426,9 @@
 
 
 <div class="row">
-        <div class="col s1 left">
+        <div class="col s12 left">
 
-     <font face="arial" size="4" color="#1565c0">&nbsp&nbsp&nbspBRAKING</font>
+     <font face="arial" size="7" color="#1565c0">&nbsp&nbsp&nbspBRAKING</font>
         </div>
       </div>
    <div class="row center">
@@ -440,7 +438,7 @@
   <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="pic/13.jpg" height="50%">
+      <img src="PAWAN.jpg" height="50%">
     </div>
   </div>
   <p><center><font face="Arial" size="4"><b>&nbsp Pawan Kishore
@@ -509,7 +507,7 @@
 <div class="row">
         <div class="col s12 left">
 
-     <font face="arial" size="4" color="#1565c0">&nbsp&nbsp&nbspTRANSMISSION</font>
+     <font face="arial" size="7" color="#1565c0">&nbsp&nbsp&nbspTRANSMISSION</font>
         </div>
       </div>
    <div class="row center">
@@ -577,7 +575,7 @@
 <div class="row">
         <div class="col s12 left">
 
-     <font face="arial" size="4" color="#1565c0"> &nbsp&nbsp&nbspROLLCAGE</font>
+     <font face="arial" size="7" color="#1565c0"> &nbsp&nbsp&nbspROLLCAGE</font>
         </div>
       </div>
    <div class="row center">
@@ -587,7 +585,7 @@
   <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="pic/3.jpg" height="50%">
+      <img src="POOJA.jpg" height="50%">
     </div>
   </div>
   <p><center><font face="Arial" size="4"><b>&nbsp Pooja Chouhan </b><br><font color="#1565c0" size="3">&nbsp Vice-Captain</font></font></center></p>
@@ -647,10 +645,12 @@
 
 
 
+
+
 <div class="row">
         <div class="col s12 left">
 
-     <font face="arial" size="4" color="#1565c0">&nbsp&nbsp&nbspMARKETING</font>
+     <font face="arial" size="7" color="#1565c0">&nbsp&nbsp MANUFACTURING AND PROCUREMENT</font>
         </div>
       </div>
    <div class="row center">
@@ -660,11 +660,10 @@
   <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="MAYANK.jpg" height="50%">
+      <img src="AJAY.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Mayank Tak
- </b><br><font color="#1565c0" size="3">&nbsp Head</font><br><font size="3">+91-8130807788</font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Ajay Kumar </b><br><font color="#1565c0" size="3">&nbsp Vice-Captain</font><br><font size="3">+91-8395035486</font></font></center></p>
 
         </div>
    </div>
@@ -679,10 +678,10 @@
          <div class="col s2">
   <div class="card">
     <div class="card-image "  >
-      <img src="ANI.jpg" height="50%">
+      <img src="NAVDEEP.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Ani Agrawal </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Navdeep Kumar </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
 
@@ -693,13 +692,15 @@
         <div class="col s2">
   <div class="card">
     <div class="card-image "  >
-      <img src="RISHABH.jpg" height="50%">
+      <img src="ANKIT MITTAL.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Rishabh Shukla</b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Ankit Mittal </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
- 
+
+
+<!--div class="row center"-->
 
 
          <div class="col s1">
@@ -707,10 +708,10 @@
          <div class="col s2">
   <div class="card">
     <div class="card-image "  >
-      <img src="DIPENDRA.jpg" height="50%">
+      <img src="ARZOO.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Dipendra Kain </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Arzoo Qureshi </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
 
@@ -721,15 +722,14 @@
         <div class="col s2">
   <div class="card">
     <div class="card-image "  >
-      <img src="ARVIND.jpg" height="50%">
+      <img src="SUMIT.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Arvind Chandrakar </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Sumit Bain </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
     <div class="col s1">
         </div>
-
 
 
 
