--- a/Team.html
+++ b/Team.html
@@ -137,9 +137,9 @@
 
 
    <div class="row">
-        <div class="col s12 left">
+        <div class="col s1 left">
 
-     <font face="arial" size="7" color="#1565c0">TEAM HEADS</font>
+     <font face="arial" size="5" color="#1565c0">TEAM HEADS</font>
         </div>
       </div>
    <div class="row center">
@@ -148,7 +148,7 @@
          <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="pic/1.jpg" height="50%">
+      <img src="ADITI.jpg" height="50%">
     </div>
   </div>
   <p><center><font face="Arial" size="4"><b>&nbsp Aditi Tiwari </b><br><font color="#1565c0" size="3">&nbspCaptain</font><br><font size="3">+91-9131454136</font></font></center></p>
@@ -178,9 +178,9 @@
 
 
 <div class="row">
-        <div class="col s12 left">
+        <div class="col s1 left">
 
-     <font face="arial" size="7" color="#1565c0">&nbsp&nbsp&nbspMARKETING</font>
+     <font face="arial" size="5" color="#1565c0">&nbsp&nbsp&nbspMARKETING AND FINANCE</font>
         </div>
       </div>
    <div class="row center">
@@ -265,6 +265,92 @@
 
 
 
+<div class="row">
+        <div class="col s1 left">
+
+     <font face="arial" size="5" color="#1565c0">&nbsp&nbsp MANUFACTURING AND PROCUREMENT</font>
+        </div>
+      </div>
+   <div class="row center">
+  <div class="col s5">
+  </div>
+
+  <div class="col s3">
+  <div class="card">
+    <div class="card-image "  >
+      <img src="AJAY.jpg" height="50%">
+    </div>
+  </div>
+  <p><center><font face="Arial" size="4"><b>&nbsp Ajay Kumar </b><br><font color="#1565c0" size="3">&nbsp Vice-Captain</font><br><font size="3">+91-8395035486</font></font></center></p>
+
+        </div>
+   </div>
+
+
+
+   <div class="row center">
+
+
+         <div class="col s1">
+        </div>
+         <div class="col s2">
+  <div class="card">
+    <div class="card-image "  >
+      <img src="NAVDEEP.jpg" height="50%">
+    </div>
+  </div>
+  <p><center><font face="Arial" size="4"><b>&nbsp Navdeep Kumar </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+
+        </div>
+
+        <div class="col s1">
+        </div>
+
+
+        <div class="col s2">
+  <div class="card">
+    <div class="card-image "  >
+      <img src="ANKIT MITTAL.jpg" height="50%">
+    </div>
+  </div>
+  <p><center><font face="Arial" size="4"><b>&nbsp Ankit Mittal </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+
+        </div>
+
+
+<!--div class="row center"-->
+
+
+         <div class="col s1">
+        </div>
+         <div class="col s2">
+  <div class="card">
+    <div class="card-image "  >
+      <img src="ARZOO.jpg" height="50%">
+    </div>
+  </div>
+  <p><center><font face="Arial" size="4"><b>&nbsp Arzoo Qureshi </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+
+        </div>
+
+        <div class="col s1">
+        </div>
+
+
+        <div class="col s2">
+  <div class="card">
+    <div class="card-image "  >
+      <img src="SUMIT.jpg" height="50%">
+    </div>
+  </div>
+  <p><center><font face="Arial" size="4"><b>&nbsp Sumit Bain </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+
+        </div>
+    <div class="col s1">
+        </div>
+
+
+
 
 
 
@@ -305,9 +391,9 @@
 
 
 <div class="row">
-        <div class="col s12 left">
+        <div class="col s1 left">
 
-     <font face="arial" size="7" color="#1565c0">&nbsp&nbsp&nbspSUSPENSION & STEERING</font>
+     <font face="arial" size="5" color="#1565c0">&nbsp&nbsp&nbspSUSPENSION & STEERING</font>
         </div>
       </div>
    <div class="row center">
@@ -426,9 +512,9 @@
 
 
 <div class="row">
-        <div class="col s12 left">
+        <div class="col s1 left">
 
-     <font face="arial" size="7" color="#1565c0">&nbsp&nbsp&nbspBRAKING</font>
+     <font face="arial" size="5" color="#1565c0">&nbsp&nbsp&nbspBRAKING</font>
         </div>
       </div>
    <div class="row center">
@@ -505,9 +591,9 @@
 
 
 <div class="row">
-        <div class="col s12 left">
+        <div class="col s1 left">
 
-     <font face="arial" size="7" color="#1565c0">&nbsp&nbsp&nbspTRANSMISSION</font>
+     <font face="arial" size="5" color="#1565c0">&nbsp&nbsp&nbspTRANSMISSION</font>
         </div>
       </div>
    <div class="row center">
@@ -573,9 +659,9 @@
 
 
 <div class="row">
-        <div class="col s12 left">
+        <div class="col s1 left">
 
-     <font face="arial" size="7" color="#1565c0"> &nbsp&nbsp&nbspROLLCAGE</font>
+     <font face="arial" size="5" color="#1565c0"> &nbsp&nbsp&nbspROLLCAGE</font>
         </div>
       </div>
    <div class="row center">
@@ -645,107 +731,10 @@
 
 
 
-
-
 <div class="row">
-        <div class="col s12 left">
+        <div class="col s1 left">
 
-     <font face="arial" size="7" color="#1565c0">&nbsp&nbsp MANUFACTURING AND PROCUREMENT</font>
-        </div>
-      </div>
-   <div class="row center">
-  <div class="col s5">
-  </div>
-
-  <div class="col s3">
-  <div class="card">
-    <div class="card-image "  >
-      <img src="AJAY.jpg" height="50%">
-    </div>
-  </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Ajay Kumar </b><br><font color="#1565c0" size="3">&nbsp Vice-Captain</font><br><font size="3">+91-8395035486</font></font></center></p>
-
-        </div>
-   </div>
-
-
-
-   <div class="row center">
-
-
-         <div class="col s1">
-        </div>
-         <div class="col s2">
-  <div class="card">
-    <div class="card-image "  >
-      <img src="NAVDEEP.jpg" height="50%">
-    </div>
-  </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Navdeep Kumar </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
-
-        </div>
-
-        <div class="col s1">
-        </div>
-
-
-        <div class="col s2">
-  <div class="card">
-    <div class="card-image "  >
-      <img src="ANKIT MITTAL.jpg" height="50%">
-    </div>
-  </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Ankit Mittal </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
-
-        </div>
-
-
-<!--div class="row center"-->
-
-
-         <div class="col s1">
-        </div>
-         <div class="col s2">
-  <div class="card">
-    <div class="card-image "  >
-      <img src="ARZOO.jpg" height="50%">
-    </div>
-  </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Arzoo Qureshi </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
-
-        </div>
-
-        <div class="col s1">
-        </div>
-
-
-        <div class="col s2">
-  <div class="card">
-    <div class="card-image "  >
-      <img src="SUMIT.jpg" height="50%">
-    </div>
-  </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Sumit Bain </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
-
-        </div>
-    <div class="col s1">
-        </div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="row">
-        <div class="col s12 left">
-
-     <font face="arial" size="4" color="#1565c0">&nbsp&nbsp&nbspWEB DESIGNER</font>
+     <font face="arial" size="5" color="#1565c0">&nbsp&nbsp&nbspWEB DESIGNER</font>
         </div>
       </div>
    <div class="row center">
