--- a/Contacts.html
+++ b/Contacts.html
@@ -95,9 +95,7 @@
 
           <p class="left-align light"><font face="arial" size="3">
             <b>Address<br></b>
-            Indian Institute of Technology Jodhpur <br>Nagaur Road, NH 65<br> Karwad, Jodhpur <br>Rajashthan 342037<br><br>
-
-
+            Indian Institute of Technology Jodhpur <br>Nagaur Road, NH 65<br> Karwad, Jodhpur <br>Rajasthan 342037<br><br>
 
             <b>Marketing Head :</b> Mayank Tak<br> <b>Phone :</b> 8130807788<br><b>Email Id :</b> racers@iitj.ac.in<br><b>Website :</b> http://www.racersiitj.in
           </font></p>
