--- a/Team.html
+++ b/Team.html
@@ -139,7 +139,7 @@
    <div class="row">
         <div class="col s1 left">
 
-     <font face="arial" size="5" color="#1565c0">TEAM HEADS</font>
+     <font face="arial" size="4" color="#1565c0">TEAM HEADS</font>
         </div>
       </div>
    <div class="row center">
@@ -180,7 +180,7 @@
 <div class="row">
         <div class="col s1 left">
 
-     <font face="arial" size="5" color="#1565c0">&nbsp&nbsp&nbspMARKETING AND FINANCE</font>
+     <font face="arial" size="4" color="#1565c0">&nbsp&nbsp&nbspMARKETING AND FINANCE</font>
         </div>
       </div>
    <div class="row center">
@@ -268,7 +268,7 @@
 <div class="row">
         <div class="col s1 left">
 
-     <font face="arial" size="5" color="#1565c0">&nbsp&nbsp MANUFACTURING AND PROCUREMENT</font>
+     <font face="arial" size="4" color="#1565c0">&nbsp&nbsp MANUFACTURING AND PROCUREMENT</font>
         </div>
       </div>
    <div class="row center">
@@ -393,7 +393,7 @@
 <div class="row">
         <div class="col s1 left">
 
-     <font face="arial" size="5" color="#1565c0">&nbsp&nbsp&nbspSUSPENSION & STEERING</font>
+     <font face="arial" size="4" color="#1565c0">&nbsp&nbsp&nbspSUSPENSION & STEERING</font>
         </div>
       </div>
    <div class="row center">
@@ -408,6 +408,19 @@
   </div>
   <p><center><font face="Arial" size="4"><b>&nbsp Abhijeet Sutar
  </b><br><font color="#1565c0" size="3">&nbsp Head</font><br><font size="3"></font></font></center></p>
+
+        </div>
+     
+     
+         <div class="col s1">
+        </div>
+         <div class="col s3">
+  <div class="card">
+    <div class="card-image "  >
+      <img src="ADITI.jpg" height="50%">
+    </div>
+  </div>
+  <p><center><font face="Arial" size="4"><b>&nbsp Aditi Tiwari </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
    </div>
@@ -514,7 +527,7 @@
 <div class="row">
         <div class="col s1 left">
 
-     <font face="arial" size="5" color="#1565c0">&nbsp&nbsp&nbspBRAKING</font>
+     <font face="arial" size="4" color="#1565c0">&nbsp&nbsp&nbspBRAKING</font>
         </div>
       </div>
    <div class="row center">
@@ -593,7 +606,7 @@
 <div class="row">
         <div class="col s1 left">
 
-     <font face="arial" size="5" color="#1565c0">&nbsp&nbsp&nbspTRANSMISSION</font>
+     <font face="arial" size="4" color="#1565c0">&nbsp&nbsp&nbspTRANSMISSION</font>
         </div>
       </div>
    <div class="row center">
@@ -661,7 +674,7 @@
 <div class="row">
         <div class="col s1 left">
 
-     <font face="arial" size="5" color="#1565c0"> &nbsp&nbsp&nbspROLLCAGE</font>
+     <font face="arial" size="4" color="#1565c0"> &nbsp&nbsp&nbspROLLCAGE</font>
         </div>
       </div>
    <div class="row center">
@@ -674,7 +687,7 @@
       <img src="POOJA.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Pooja Chouhan </b><br><font color="#1565c0" size="3">&nbsp Vice-Captain</font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Pooja Chouhan </b><br><font color="#1565c0" size="3">&nbsp Head</font></font></center></p>
 
         </div>
    </div>
@@ -734,7 +747,7 @@
 <div class="row">
         <div class="col s1 left">
 
-     <font face="arial" size="5" color="#1565c0">&nbsp&nbsp&nbspWEB DESIGNER</font>
+     <font face="arial" size="4" color="#1565c0">&nbsp&nbsp&nbspWEB DESIGNER</font>
         </div>
       </div>
    <div class="row center">
