--- a/Team.html
+++ b/Team.html
@@ -396,18 +396,46 @@
      <font face="arial" size="4" color="#1565c0">&nbsp&nbsp&nbspSUSPENSION & STEERING</font>
         </div>
       </div>
-   <div class="row center">
-  <div class="col s5">
-  </div>
-
-  <div class="col s3">
+  <div class="row center">
+         <div class="col s2">
+        </div>
+         <div class="col s3">
   <div class="card">
     <div class="card-image "  >
       <img src="ABHIJEET.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Abhijeet Sutar
- </b><br><font color="#1565c0" size="3">&nbsp Head</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Abhijeet Sutar </b><br><font color="#1565c0" size="3">&nbspHead</font><br><font size="3"></font></center></p>
+
+        </div>
+
+        <div class="col s2">
+        </div>
+
+
+        <div class="col s3">
+  <div class="card">
+    <div class="card-image "  >
+      <img src="ADITI.jpg" height="50%">
+    </div>
+  </div>
+  <p><center><font face="Arial" size="4"><b>&nbsp Aditi Tiwari </b><br><font color="#1565c0" size="3">&nbsp</font><br></center></p>
+
+        </div>
+      </div>
+
+
+
+        <div class="col s2">
+  <div class="card">
+    <div class="card-image "  >
+      <img src="RISHABH.jpg" height="50%">
+    </div>
+  </div>
+  <p><center><font face="Arial" size="4"><b>&nbsp Rishabh Shukla</b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+
+        </div>
+ 
 
         </div>
      
