--- a/Team.html
+++ b/Team.html
@@ -137,7 +137,7 @@
 
 
    <div class="row">
-        <div class="col s1 left">
+        <div class="col s1">
 
      <font face="arial" size="4" color="#1565c0">TEAM HEADS</font>
         </div>
