--- a/Team.html
+++ b/Team.html
@@ -180,7 +180,7 @@
 <div class="row">
         <div class="col s1 left">
 
-     <font face="arial" size="4" color="#1565c0">&nbsp&nbsp&nbspMARKETING AND FINANCE</font>
+     <font face="arial" size="4" color="#1565c0">&nbsp MARKETING AND FINANCE</font>
         </div>
       </div>
    <div class="row center">
@@ -268,7 +268,7 @@
 <div class="row">
         <div class="col s1 left">
 
-     <font face="arial" size="4" color="#1565c0">&nbsp&nbsp MANUFACTURING AND PROCUREMENT</font>
+     <font face="arial" size="4" color="#1565c0">&nbspMANUFACTURING AND PROCUREMENT</font>
         </div>
       </div>
    <div class="row center">
