--- a/Team.html
+++ b/Team.html
@@ -391,9 +391,9 @@
 
 
 <div class="row">
-        <div class="col s1 left">
+        <div class="col s1">
 
-     <font face="arial" size="4" color="#1565c0">&nbsp&nbsp&nbspSUSPENSION & STEERING</font>
+     <font face="arial" size="4" color="#1565c0">&nbspSUSPENSION & STEERING</font>
         </div>
       </div>
   <div class="row center">
@@ -425,33 +425,6 @@
       </div>
 
 
-
-        <div class="col s2">
-  <div class="card">
-    <div class="card-image "  >
-      <img src="RISHABH.jpg" height="50%">
-    </div>
-  </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Rishabh Shukla</b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
-
-        </div>
- 
-
-        </div>
-     
-     
-         <div class="col s1">
-        </div>
-         <div class="col s3">
-  <div class="card">
-    <div class="card-image "  >
-      <img src="ADITI.jpg" height="50%">
-    </div>
-  </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Aditi Tiwari </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
-
-        </div>
-   </div>
 
 
 
