--- a/Team.html
+++ b/Team.html
@@ -139,7 +139,10 @@
    <div class="row">
         <div class="col s1">
 
-     <font face="arial" size="4" color="#1565c0">TEAM HEADS</font>
+     
+     <p><center><font face="Arial" size="4"><b>&nbsp Team Heads</b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+
+
         </div>
       </div>
    <div class="row center">
