--- a/Team.html
+++ b/Team.html
@@ -140,7 +140,7 @@
         <div class="col s1">
 
      
-     <p><center><font face="Arial" size="3"><b>&nbspTeam Heads</b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+     <p><center><font face="Arial" size="3"><b>Team&nbspHeads</b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
 
         </div>
