--- a/Team.html
+++ b/Team.html
@@ -190,7 +190,7 @@
 
 
 <div class="row">
-        <div class="col s1 left">
+        <div class="col s1">
 
      <font face="arial" size="4" color="#1565c0">MARKETING&nbspAND&nbspFINANCE</font>
         </div>
@@ -283,7 +283,7 @@
 
 
 <div class="row">
-        <div class="col s1 left">
+        <div class="col s1">
 
      <font face="arial" size="4" color="#1565c0">MANUFACTURING&nbspAND&nbspPROCUREMENT</font>
         </div>
@@ -410,7 +410,7 @@
 <div class="row">
         <div class="col s1">
 
-     <font face="arial" size="4" color="#1565c0">&nbspSUSPENSION&nbspand&nbspSTEERING</font>
+     <font face="arial" size="4" color="#1565c0">&nbspSUSPENSION&nbspAND&nbspSTEERING</font>
         </div>
       </div>
   <div class="row center">
@@ -556,7 +556,7 @@
 
 
 <div class="row">
-        <div class="col s1 left">
+        <div class="col s1">
 
      <font face="arial" size="4" color="#1565c0">BRAKING</font>
         </div>
@@ -584,7 +584,7 @@
       <img src="MAYANK.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp MAYANK TAK </b><br><font color="#1565c0" size="3">&nbsp</font><br></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Mayank Tak </b><br><font color="#1565c0" size="3">&nbsp</font><br></center></p>
 
         </div>
       </div>
@@ -646,7 +646,7 @@
 
 
 <div class="row">
-        <div class="col s1 left">
+        <div class="col s1">
 
      <font face="arial" size="4" color="#1565c0">TRANSMISSION</font>
         </div>
@@ -731,7 +731,7 @@
      
 
 <div class="row">
-        <div class="col s1 left">
+        <div class="col s1">
 
      <font face="arial" size="4" color="#1565c0">ROLLCAGE</font>
         </div>
@@ -759,7 +759,7 @@
       <img src="ANIRUDH.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp ANIRUDH TOMAR </b><br><font color="#1565c0" size="3">&nbsp</font><br></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Anirudh Tomar </b><br><font color="#1565c0" size="3">&nbsp</font><br></center></p>
 
         </div>
       </div>
@@ -818,7 +818,7 @@
      
 
 <div class="row">
-        <div class="col s1 left">
+        <div class="col s1">
 
      <font face="arial" size="4" color="#1565c0">WEB&nbspDESIGNER</font>
         </div>
