--- a/Team.html
+++ b/Team.html
@@ -143,9 +143,9 @@
 
 
    <div class="row">
-        <div class="col s12 left">
+        <div class="col s5">
 
-     <font face="arial" size="4" color="#1565c0">TEAM&nbspHEADS</font>
+     <font face="arial" size="4" color="#1565c0">                                       TEAM&nbspHEADS</font>
      
 
 
@@ -200,7 +200,7 @@
 <div class="row">
         <div class="col s12 left">
 
-     <font face="arial" size="4" color="#1565c0">MARKETING&nbspAND&nbspFINANCE</font>
+     <font face="arial" size="4" color="#1565c0">                     MARKETING&nbspAND&nbspFINANCE</font>
         </div>
       </div>
    <div class="row center">
@@ -299,7 +299,7 @@
 <div class="row">
         <div class="col s12 left">
 
-     <font face="arial" size="4" color="#1565c0">MANUFACTURING&nbspAND&nbspPROCUREMENT</font>
+     <font face="arial" size="4" color="#1565c0">&nbsp&nbsp&nbspMANUFACTURING&nbspAND&nbspPROCUREMENT</font>
         </div>
       </div>
    <div class="row center">
@@ -430,7 +430,7 @@
 <div class="row">
         <div class="col s12 left">
 
-     <font face="arial" size="4" color="#1565c0">&nbspSUSPENSION&nbspAND&nbspSTEERING</font>
+     <font face="arial" size="4" color="#1565c0">&nbsp&nbsp&nbspSUSPENSION&nbspAND&nbspSTEERING</font>
         </div>
       </div>
   <div class="row center">
@@ -583,7 +583,7 @@
 <div class="row">
         <div class="col s12 left">
 
-     <font face="arial" size="4" color="#1565c0">BRAKING</font>
+     <font face="arial" size="4" color="#1565c0">&nbsp&nbsp&nbspBRAKING</font>
         </div>
       </div>
   <div class="row center">
@@ -599,7 +599,7 @@
 
         </div>
 
-        <div class="col s2">
+        <div class="col s3">
         </div>
 
 
@@ -678,7 +678,7 @@
 <div class="row">
         <div class="col s12 left">
           
-     <font face="arial" size="4" color="#1565c0">TRANSMISSION</font>
+     <font face="arial" size="4" color="#1565c0">&nbsp&nbsp&nbspTRANSMISSION</font>
         </div>
       </div>
   <div class="row center">
@@ -771,7 +771,7 @@
 <div class="row">
        <div class="col s12 left">
 
-     <font face="arial" size="4" color="#1565c0">ROLLCAGE</font>
+     <font face="arial" size="4" color="#1565c0">&nbsp&nbsp&nbspROLLCAGE</font>
         </div>
       </div>
   <div class="row center">
@@ -863,7 +863,7 @@
 <div class="row">
         <div class="col s12 left">
 
-     <font face="arial" size="4" color="#1565c0">WEB&nbspDESIGNER</font>
+     <font face="arial" size="4" color="#1565c0">&nbsp&nbsp&nbsp&nbsp&nbsp&nbspWEB&nbspDESIGNER</font>
         </div>
       </div>
    <div class="row center">
