--- a/Team.html
+++ b/Team.html
@@ -583,7 +583,7 @@
 <div class="row">
         <div class="col s1">
 
-     <font face="arial" size="4" color="#1565c0"><b>&nbsp&nbsp&nbspBRAKING</b></font>
+     <font face="arial" size="4" color="#1565c0"><b>&nbsp&nbsp&nbsp&nbspBRAKING</b></font>
         </div>
       </div>
   <div class="row center">
@@ -678,7 +678,7 @@
 <div class="row">
         <div class="col s1">
           
-     <font face="arial" size="4" color="#1565c0"><b>&nbsp&nbsp&nbspTRANSMISSION</b></font>
+     <font face="arial" size="4" color="#1565c0"><b>&nbsp&nbsp&nbsp&nbspTRANSMISSION</b></font>
         </div>
       </div>
   <div class="row center">
@@ -771,7 +771,7 @@
 <div class="row">
        <div class="col s1">
 
-     <font face="arial" size="4" color="#1565c0"><b>&nbsp&nbsp&nbspROLLCAGE</b></font>
+     <font face="arial" size="4" color="#1565c0"><b>&nbsp&nbsp&nbsp&nbspROLLCAGE</b></font>
         </div>
       </div>
   <div class="row center">
@@ -863,7 +863,7 @@
 <div class="row">
         <div class="col s1">
 
-     <font face="arial" size="4" color="#1565c0"><b>&nbsp&nbsp&nbsp&nbsp&nbsp&nbspWEB&nbspDESIGNER</b></font>
+     <font face="arial" size="4" color="#1565c0"><b>&nbsp&nbsp&nbsp&nbsp&nbspWEB&nbspDESIGNER</b></font>
         </div>
       </div>
    <div class="row center">
