--- a/Team.html
+++ b/Team.html
@@ -489,7 +489,7 @@
 
         </div>
 
-        <div class="col s1.5">
+        <div class="col s1 m4">
         </div>
 
 
@@ -502,7 +502,7 @@
   <p><center><font face="Arial" size="4"><b>&nbspManikanta </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
-    <div class="col s1.5">
+    <div class="col s1 m4">
         </div>
 
 
@@ -534,7 +534,7 @@
 
         </div>
 
-        <div class="col s1.5">
+        <div class="col s1 m4">
         </div>
 
 
@@ -547,7 +547,7 @@
   <p><center><font face="Arial" size="4"><b>&nbsp Bharath Nalla </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
-    <div class="col s1.5">
+    <div class="col s1 m4">
         </div>
 
 
