--- a/Team.html
+++ b/Team.html
@@ -477,7 +477,7 @@
    <div class="row center">
 
 
-         <div class="col s3 m7 l1">
+         <div class="col s0">
         </div>
          <div class="col s2">
   <div class="card">
@@ -489,7 +489,7 @@
 
         </div>
 
-        <div class="col s1 m3 l1">
+        <div class="col s0.5">
         </div>
 
 
@@ -502,7 +502,7 @@
   <p><center><font face="Arial" size="4"><b>&nbspManikanta </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
-    <div class="col s1 m3 l1">
+    <div class="col s0.5">
         </div>
 
 
