--- a/Team.html
+++ b/Team.html
@@ -519,10 +519,7 @@
       </div>
 
 
-   <div class="row center">
-
-
-         <div class="col s3 m7 l2">
+         <div class="col s0.5">
         </div>
          <div class="col s2">
   <div class="card">
@@ -534,7 +531,7 @@
 
         </div>
 
-        <div class="col s1 m1">
+        <div class="col s0.5">
         </div>
 
 
@@ -547,7 +544,7 @@
   <p><center><font face="Arial" size="4"><b>&nbsp Bharath Nalla </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
-    <div class="col s1 m1">
+    <div class="col s0.5">
         </div>
 
 
