--- a/Team.html
+++ b/Team.html
@@ -477,7 +477,7 @@
    <div class="row center">
 
 
-         <div class="col l0">
+         <div class="col s1">
         </div>
          <div class="col s3">
   <div class="card">
@@ -489,7 +489,7 @@
 
         </div>
 
-        <div class="col l0">
+        <div class="col s1">
         </div>
 
 
@@ -502,7 +502,7 @@
   <p><center><font face="Arial" size="4"><b>&nbspManikanta </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
-    <div class="col l0">
+    <div class="col s1">
         </div>
 
 
@@ -515,11 +515,11 @@
   <p><center><font face="Arial" size="4"><b>Dipendra Kain </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
+     </div>
+      <div class="row center">
 
-      
 
-
-         <div class="col l0">
+         <div class="col s1">
         </div>
          <div class="col s3">
   <div class="card">
@@ -531,7 +531,7 @@
 
         </div>
 
-        <div class="col l0">
+        <div class="col s1">
         </div>
 
 
@@ -544,7 +544,7 @@
   <p><center><font face="Arial" size="4"><b>&nbsp Bharath Nalla </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
-    <div class="col l0">
+    <div class="col s1">
         </div>
 
 
