--- a/Team.html
+++ b/Team.html
@@ -224,9 +224,9 @@
    <div class="row center">
 
 
-         <div class="col s1">
-        </div>
          <div class="col s2">
+        </div>
+         <div class="col s3">
   <div class="card">
     <div class="card-image "  >
       <img src="ANI.jpg" height="50%">
@@ -236,11 +236,11 @@
 
         </div>
 
-        <div class="col s1">
+        <div class="col s3">
         </div>
 
 
-        <div class="col s2">
+        <div class="col s3">
   <div class="card">
     <div class="card-image "  >
       <img src="RISHABH.jpg" height="50%">
@@ -249,12 +249,17 @@
   <p><center><font face="Arial" size="4"><b>&nbsp Rishabh Shukla</b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
- 
+   </div>
 
 
-         <div class="col s1">
-        </div>
+
+   <div class="row center">
+
+
+
          <div class="col s2">
+        </div>
+         <div class="col s3">
   <div class="card">
     <div class="card-image "  >
       <img src="DIPENDRA.jpg" height="50%">
@@ -264,11 +269,11 @@
 
         </div>
 
-        <div class="col s1">
+        <div class="col s3">
         </div>
 
 
-        <div class="col s2">
+        <div class="col s3">
   <div class="card">
     <div class="card-image "  >
       <img src="ARVIND.jpg" height="50%">
@@ -277,7 +282,6 @@
   <p><center><font face="Arial" size="4"><b>&nbsp Arvind Chandrakar </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
-    <div class="col s1">
         </div>
 
 
@@ -322,9 +326,9 @@
    <div class="row center">
 
 
-         <div class="col s1">
-        </div>
          <div class="col s2">
+        </div>
+         <div class="col s3">
   <div class="card">
     <div class="card-image "  >
       <img src="NAVDEEP.jpg" height="50%">
@@ -334,11 +338,11 @@
 
         </div>
 
-        <div class="col s1">
+        <div class="col s3">
         </div>
 
 
-        <div class="col s2">
+        <div class="col s3">
   <div class="card">
     <div class="card-image "  >
       <img src="ANKIT MITTAL.jpg" height="50%">
@@ -347,11 +351,16 @@
   <p><center><font face="Arial" size="4"><b>&nbsp Ankit Mittal </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
+  </div>
 
 
-         <div class="col s1">
-        </div>
+
+   <div class="row center">
+
+
          <div class="col s2">
+        </div>
+         <div class="col s3">
   <div class="card">
     <div class="card-image "  >
       <img src="ARZOO.jpg" height="50%">
@@ -361,11 +370,11 @@
 
         </div>
 
-        <div class="col s1">
+        <div class="col s3">
         </div>
 
 
-        <div class="col s2">
+        <div class="col s3">
   <div class="card">
     <div class="card-image "  >
       <img src="SUMIT.jpg" height="50%">
