--- a/Team.html
+++ b/Team.html
@@ -316,7 +316,7 @@
       <img src="AJAY.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Ajay Kumar </b><br><font color="#1565c0" size="3">&</font><br><font size="3">+91-8395035486</font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Ajay Kumar </b><br><font color="#1565c0" size="3">&</font><br><font size="3"></font></font></center></p>
 
         </div>
    </div>
